--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,7 +14,7 @@
     <div class="task">
       <%= form_for(@task || Task.new) do |f| %>
         <div class="icon"><%= image_tag("plus.png")%></div>
-        <div class="name"><%= f.text_field :name %><%= f.hidden_field :project_id, :value => project.id %></div>
+        <div class="name"><%= f.text_field :name, :placeholder => "Start typing here to create a task...", :size => 70%><%= f.hidden_field :project_id, :value => project.id %></div>
         <div class="button"><%= f.submit %></div>
       <% end %>
     </div>
@@ -28,8 +28,11 @@
         <div class="action edit"><%= link_to '', edit_task_path(task) %></div>
         <div class="action delete"><%= link_to '', task, method: :delete, data: { confirm: 'Are you sure?' } %></div>
       </li>
+      <br>
     <% end %>
+    <br>
   <% end %>
+  <br>
 </div>
     <br>
 <%= link_to 'Add ToDo List', new_project_path %>
