--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -14,10 +14,17 @@
     <div class="task">
       <%= form_for(@task || Task.new) do |f| %>
         <div class="icon"><%= image_tag("plus.png")%></div>
-        <div class="name"><%= f.text_field :name, :placeholder => "Start typing here to create a task...", :size => 70%><%= f.hidden_field :project_id, :value => project.id %></div>
-        <div class="button"><%= f.submit %></div>
+        <div class="name"><%= f.text_field :name, :placeholder => "Start typing here to create a task...", :size => 75%><%= f.hidden_field :project_id, :value => project.id %></div>
+        <div class="button"><%= f.submit '    Add Task    ', :class => 'button_add_task' %></div>
       <% end %>
     </div>
+
+
+
+
+
+
+
 
 
     <% project.tasks.each do |task| %>
