text-align: center

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .project_and_tasks{
-  margin:0 15% 0 15%;
+  text-align: center;
 }
 
 .project {width: 800px;
