--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :project_id %><br>
-    <%= f.number_field :project_id %>
+    <%= f.collection_select :project_id, Project.all, :id, :name %>
   </div>
   <div class="actions">
     <%= f.submit %>
