--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -34,18 +34,27 @@ margin-left:230px;
  display: inline-block;
 }
 
-.project .action.edit {width: 25px;
+.project .action.edit {
+  display: inline-block;
+  a {
+  width: 30px;
   height: 35px;
   padding: 5px;
   vertical-align:middle;
   display: inline-block;
+  background: url("/assets/edit_project.png") no-repeat;
+  }
 }
 
-.project .action.delete {width: 25px;
+.project .action.delete {
+display: inline;
+a {
+  width: 30px;
   height: 35px;
   padding: 5px;
   vertical-align:middle;
-display: inline-block;
+  background: url("/assets/delete_project.png") no-repeat;
+  }
 }
 
 
@@ -152,4 +161,10 @@ display: inline-block;}
     color: white;
     font-size: 12pt;
 }
+
+
+
+
+
+
 
