--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -35,7 +35,8 @@
   <br>
 </div>
     <br>
-<%= link_to 'Add ToDo List', new_project_path %> <br>
-<%= link_to 'All Tasks', tasks_path %><br>
 
 
+<%= link_to '  Add ToDo List  ', new_project_path, {class: "new_project_button"} %>
+<br><br><br>
+<%= link_to '  All Tasks  ', tasks_path, {class: "all_task_button"} %>
