--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -77,7 +77,7 @@
 }
 
 .tasks {
-  background: #FFFFFF;
+  background: #FCFED5;
   list-style: none;
   list-type: none;
   padding: 0;
@@ -105,8 +105,7 @@
   }
 
   .actions {
-    float: left;
-    width: 200px;
+    float: right;
     padding: 0;
     margin: 0;
 
@@ -119,7 +118,7 @@
 }
 
 
-tmp {
+
 
 .tasks .name:hover {
     color: #000000;
@@ -139,9 +138,24 @@ display: inline-block;
 .tasks .action.edit {
   display: inline;
   a {
-  background: url("/assets/edit_project.png") no-repeat;
+  background: url("/assets/edit_task.png") no-repeat;
+  width: 14px;
+  height: 14px;
   vertical-align:middle;
   display: inline-block;
+  float:right;
+  }
+}
+
+.tasks .action.show {
+  display: inline;
+  a {
+  background: url("/assets/show_task.png") no-repeat;
+  width: 16px;
+  height: 16px;
+  vertical-align:middle;
+  display: inline-block;
+  float:right;
   }
 }
 
@@ -153,6 +167,7 @@ display: inline-block;
   width:14px;
   height:16px;
   background: url("/assets/delete_task.png") no-repeat;
+  float:right;
   }
 }
 
@@ -173,7 +188,7 @@ display: inline-block;
   background: url("/assets/close.png") no-repeat;
   }
 }
-}
+
 
 
 .button_add_task {
