Very bad and quick commit for table all tasks

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.task_all{
+  margin:10px auto 100px auto;
+  width: 800px;
+}
+
 .project_and_tasks{
   margin:10px auto 100px auto;
   width: 800px;
