add config.serve_statis_assets = true

--- a/app/assets/stylesheets/__base.css.scss
+++ b/app/assets/stylesheets/__base.css.scss
@@ -9,14 +9,14 @@ body {
 width:14px;
 height:16px;
 display: inline-block;
-background: image-url("delete_task.png") no-repeat;
+background: image-url('delete_task.png') no-repeat;
 }
 
 .task-action-edit-task a {
 width:14px;
 height:14px;
 display: inline-block;
-background: image-url("edit_task.png") no-repeat;
+background: image-url('edit_task.png') no-repeat;
 }
 
 table {
@@ -33,12 +33,12 @@ td.col3 { background: #FFFFFF; color: white; }
 width:14px;
 height:16px;
 display: inline-block;
-background: image-url("delete_task.png") no-repeat;
+background: image-url('delete_task.png') no-repeat;
 }
 
 .task-action-edit-task a {
 width:14px;
 height:14px;
 display: inline-block;
-background: image-url("edit_task.png") no-repeat;
+background: image-url('edit_task.png') no-repeat;
 }
