--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,4 +6,5 @@
 </p>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back to all tasks', tasks_path %> |
+<%= link_to 'Back to the projects', projects_path %>
