--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Back to all tasks', tasks_path %> |
+<%= link_to 'Back to projects', projects_path %>
