--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -2,7 +2,7 @@
 <h2><center>FROM RUBY GARAGE</center></h2>
 
 <% @projects.each do |project| %>
-  <div class="project_and_tasks">
+  <div class="project_and_tasks" data-id="<%= project.id %>">
     <div class="project">
       <div class="name"><%= project.name %></div>
       <div class="action edit"><%= link_to '', edit_project_path(project) %></div>
@@ -19,7 +19,7 @@
 
     <div class="tasks">
       <% project.tasks.each_with_index do |task, index| %>
-        <div class="task-element">
+        <div class="task-element" data-id='<%= task.id %>'>
           <div class="checkbox">
               <%= form_for task do |t| %>
                 <%=t.check_box :status, {}, "done", "open" %>
@@ -30,7 +30,7 @@
           <div class="actions">
             <div class="action show"><%= link_to '', task %></div>
             <div class="action edit"><%= link_to '', edit_task_path(task) %></div>
-             <div class="action save"><%= link_to '' %></div>
+             <div class="action save"><%= link_to ''%></div>
             <div class="action delete"><%= link_to '', task, method: :delete, data: { confirm: 'Are you sure?' } %></div>
           </div>
         </div>
